[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "travel_ledger"
version = "2025.10.16"
description = "A travel expenses ledger with statistic analysis"
authors = [{ name = "Ian Khan" }]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
travel-ledger = "travel_ledger.main:main"
