[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-ledger"
version = "0.1.0"
description = "A ledger tool for managing and analyzing expenses made in trips and travels"
authors = [{ name = "Ian Khan" }]
requires-python = ">=3.9"
dependencies = [
    "pandas >= 2.0",
    "openpyxl >= 3.0",
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
keywords = ["travel", "ledger", "finance", "database"]
homepage = "https://github.com/ian-khan/travel-ledger"
repository = "https://github.com/ian-khan/travel-ledger"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
travel-ledger = "travel_ledger.main:main"